# OpenGL

./: README.md
DemoTutorials/: .gitignore  CMakeLists.txt  README.md
DemoTutorials/cmake/: FindGLFW.cmake  FindGLM.cmake  Packaging.cmake  download_external_packages.cmake
DemoTutorials/src/: basicTriangleDemo.cpp  basicTriangleDemo.h  demoBase.cpp  demoBase.h  main.cpp  mesh.h  modelTransformation.cpp  modelTransformation.h  orthographicProjection.cpp  orthographicProjection.h  orthographicProjectionNDC.cpp  orthographicProjectionNDC.h
DemoTutorials/src/resources/: CMakeLists.txt  base.fs  base.vs  baseColor.fs
helloTraingle/: CMakeLists.txt  README.md
helloTraingle/src/: helloTraingle.cpp
orthographicProjection/: CMakeLists.txt  README.md
orthographicProjection/src/: camera2d.cpp  camera2d.h  helloTraingle.cpp  main.cpp  mesh.cpp  mesh.h  shader.cpp  shader.h
orthographicProjection/src/resources/: base.vs
